<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:isScrollContainer="true"
    android:layout_height="wrap_content">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="26dp"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_marginTop="37dp"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:elevation="5dp"
            android:background="@drawable/back_button"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="98dp"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Full name"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/register_full_name"
            android:hint="@string/enter_name"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:paddingHorizontal="20dp"
            android:inputType="text"
            android:maxLines="@integer/material_motion_duration_long_1"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="E-mail"
            />

        <EditText
            android:id="@+id/register_email"
            android:hint="@string/enter_email"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:paddingHorizontal="20dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />



        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            />

        <EditText
            android:id="@+id/register_password"
            android:hint="@string/enter_password"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:paddingHorizontal="20dp"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
            android:maxLines="1"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_marginHorizontal="65dp"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp"/>

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textColor="@color/black"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:clickable="true"
                android:textColor="@color/outrageous_orange"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>