<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/drawer"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="26dp"
            android:paddingVertical="32dp"
            tools:context=".MainActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/main_menu"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:background="@drawable/back_button"
                    android:elevation="2dp"
                    android:src="@drawable/ic_baseline_menu_24" />

                <ImageButton
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/back_button" />
            </RelativeLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_would_you_like_to_order"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <Space
                android:layout_width="wrap_content"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/main_search"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="@drawable/search"
                android:clickable="false"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="18dp"
                android:hint="@string/find_hint"
                android:paddingHorizontal="23dp"
                android:textSize="14sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/featured"
                   android:textColor="@color/black"
                   android:textSize="18sp"
                   android:textStyle="bold" />

               <TextView
                   android:clickable="true"
                   android:id="@+id/main_view_all"
                   android:layout_alignParentEnd="true"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/view_all"
                   android:textColor="@color/outrageous_orange"
                   android:textSize="13sp"
                   android:textStyle="normal" />
           </RelativeLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/main_featured_shimmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                    <include layout="@layout/featured_restaurant_shimmer" />

                    <Space
                        android:layout_width="15dp"
                        android:layout_height="wrap_content" />

                    <include layout="@layout/featured_restaurant_shimmer" />

                    <Space
                        android:layout_width="15dp"
                        android:layout_height="wrap_content" />

                    <include layout="@layout/featured_restaurant_shimmer" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_featured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:clickable="true"
                    android:id="@+id/main_items_view_all"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all"
                    android:textColor="@color/outrageous_orange"
                    android:textSize="13sp"
                    android:textStyle="normal" />
            </RelativeLayout>


            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/main_popular_shimmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                    <include layout="@layout/popular_items_shimmer" />

                    <Space
                        android:layout_width="15dp"
                        android:layout_height="wrap_content" />

                    <include layout="@layout/popular_items_shimmer" />

                    <Space
                        android:layout_width="15dp"
                        android:layout_height="wrap_content" />

                    <include layout="@layout/popular_items_shimmer" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/nav_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>